--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,5 @@
 # Node.js
+
 # Build a general Node.js project with npm.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
@@ -19,3 +20,8 @@ steps:
     npm install
 #    npm run build
   displayName: 'npm install'
+
+- task: CopyFiles@2
+  inputs:
+    Contents: '**'
+    TargetFolder: 
