--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,3 +25,11 @@ steps:
   inputs:
     Contents: '**'
     TargetFolder: 
+    
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(Build.BinariesDirectory)'
+    includeRootFolder: true
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    replaceExistingArchive: true
