--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ steps:
 - task: CopyFiles@2
   inputs:
    Contents: '**'
-   TargetFolder: '$(Build.ArtifactStagingDirectory)''
+   TargetFolder: '$(Build.ArtifactStagingDirectory)'
     
 # - task: ArchiveFiles@2
 #   inputs:
