static files for admin page

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
     "discord.js": "^11.5.1",
+    "node-static": "^0.7.11",
     "winston": "^3.2.1"
   }
 }
