--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "discord.js": "^11.5.1",
     "fast-safe-stringify": "^2.0.7",
     "node-static": "^0.7.11",
+    "taffy": "^2.6.2",
     "winston": "^3.2.1"
   }
 }
