--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
     "discord.js": "^11.5.1",
+    "esrever": "^0.2.0",
     "fast-safe-stringify": "^2.0.7",
     "node-static": "^0.7.11",
     "taffy": "^2.6.2",
