--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fast-safe-stringify": "^2.0.7",
     "node-static": "^0.7.11",
     "taffy": "^2.6.2",
+    "uglify-js": "^3.7.3",
     "winston": "^3.2.1"
   }
 }
